--- a/portfolio.html
+++ b/portfolio.html
@@ -20,8 +20,8 @@
         <nav class="page-navigator list">
             <a href="#" class="logo link" target="_blank">Web<span class="logotup link">Studio</span></a>
             <ul class="menu-list list">
-                <li class="menu-item list"><a href="./index.html" class="menu-item-site link">Studio</a></li>
-                <li class="menu-item list"><a href="./portfolio.html" class="menu-item-site link">Portfolio</a></li>
+                <li class="menu-item list"><a href="./index.html" class="menu-item-site current link">Studio</a></li>
+                <li class="menu-item list"><a href="./portfolio.html" class="menu-item-site current link">Portfolio</a></li>
                 <li class="menu-item list"><a href="" class="menu-item-site link">Contacts</a></li>
             </ul>
         </nav>
@@ -107,9 +107,44 @@
     
     <footer class="footer-section">
         <div class="container">
-        <a href="#" class="logo link" target="_blank">Web <span class="logotup-footer link">Studio</span></a>
+        <a href="#" class="logo foot link" target="_blank">Web <span class="logotup-footer link">Studio</span></a>
         <p class="footer-description">Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
     </div>
+    <div>
+        <p class="social-name">Social media</p>
+        <ul class="footer-social list">
+            <li class="foot-soc-item">
+                <a class="foot-social-link link" href="">
+                    <svg class="footer-social-icon" width="24px" height="24px">
+                    <use href="./images/icons.svg#icon-instagram"></use>
+                    </svg>
+                </a>
+            </li>
+            <li class="foot-soc-item">
+                <a class="foot-social-link link" href="">
+                    <svg class="footer-social-icon" width="24px" height="24px">
+                    <use href="./images/icons.svg#icon-twitter"></use>
+                    </svg>
+                </a>
+            </li>
+            <li class="foot-soc-item">
+                <a class="foot-social-link link" href="">
+                    <svg class="footer-social-icon" width="24px" height="24px">
+                    <use href="./images/icons.svg#icon-facebook"></use>
+                    </svg>
+                </a>
+            </li>
+            <li class="foot-soc-item">
+                <a class="foot-social-link link" href="">
+                    <svg class="footer-social-icon" width="24px" height="24px">
+                    <use href="./images/icons.svg#icon-linkedin"></use>
+                    </svg>
+                </a>
+            </li>
+        </ul>
+    </div>
     </footer>
+    
+    <script src="./js/modal.js"></script>
 </body>
 </html>
