--- a/index.html
+++ b/index.html
@@ -39,7 +39,6 @@
         <!--  -->
         <section class="main-section">
         <div class="container">
-        
             <h1 class="main-title-name">Effective Solutions for Your Business</h1>
             <button class="button-service" type="button" data model open >Order Service</button>
         </div>
@@ -51,31 +50,33 @@
         <h2 class="visually-hidden">Text</h2>
      <ul class="hero list">
         <li class="hero-list-item">
+            <div class="imag-hero">
             <svg class="hero-icon" width="64px" height="64px">
                 <use href="./images/icons.svg#icon-antenna" ></use>
-            </svg>
+            </svg></div>
             <h3 class="third-title">Strategy</h3>
             <p class="hero-description">Our goal is to identify the business
                 problem to walk away with the perfect and creative solution. </p>
         </li>
         <li class="hero-list-item">
+            <div class="imag-hero">
             <svg class="hero-icon" width="64px" height="64px">
                 <use href="./images/icons.svg#icon-clock"></use>
-            </svg>
+            </svg></div>
             <h3 class="third-title">Punctuality</h3>
             <p class="hero-description">Bring the key message to the brand's audience for the best price within the shortest possible time.</p>
         </li>
-        <li class="hero-list-item">
+        <li class="hero-list-item"> <div class="imag-hero">
             <svg class="hero-icon" width="64px" height="64px">
                 <use href="./images/icons.svg#icon-diagram" ></use>
-            </svg>
+            </svg></div>
             <h3 class="third-title">Diligence</h3>
             <p class="hero-description">Research and confirm brands that present the strongest digital growth opportunities and minimize risk.</p>
         </li>
-        <li class="hero-list-item">
+        <li class="hero-list-item"><div class="imag-hero">
             <svg class="hero-icon" width="64px" height="64px">
                 <use href="./images/icons.svg#icon-astronaut" ></use>
-            </svg>
+            </svg></div>
             <h3 class="third-title">Technologies</h3>
             <p class="hero-description">Design practice focused on digital experiences. We bring forth a deep passion for problem-solving.</p>
         </li>
@@ -120,21 +121,21 @@
                     </a>
                 </li>
                 <li class="team-social-item">
-                    <a href="">
+                    <a href="" class="team-social-link" >
                         <svg class="team-social-icon" width="16px" height="16px">
                         <use href="./images/icons.svg#icon-twitter"></use>
                         </svg>
                     </a>
                 </li>
                 <li class="team-social-item">
-                    <a href="">
+                    <a href="" class="team-social-link">
                         <svg class="team-social-icon" width="16px" height="16px">
                         <use href="./images/icons.svg#icon-facebook"></use>
                         </svg>
                     </a>
                 </li>
                 <li class="team-social-item">
-                    <a href="">
+                    <a href="" class="team-social-link">
                         <svg class="team-social-icon" width="16px" height="16px">
                         <use href="./images/icons.svg#icon-linkedin"></use>
                         </svg>
@@ -261,35 +262,47 @@
     <div class="customers container">
         <h2 class="customers-title">Customers</h2>
         <ul class="customers-item list">
-            <li>
-              <svg class="customers-icon" height="88" width="168"> 
+            <li class="customers-links">
+            <a href="" class="cust-posulania"> 
+              <svg class="customers-icon" height="56" width="104"> 
               <use href="./images/icons.svg#icon-logo-1"></use>
               </svg>
+            </a>
             </li>
-            <li>
-                <svg class="customers-icon" height="88" width="168"> 
+            <li class="customers-links">
+            <a href=""  class="cust-posulania">
+                <svg class="customers-icon" height="56" width="104"> 
                     <use href="./images/icons.svg#icon-logo-2"></use>
                     </svg>
+            </a>
             </li>
-            <li>
-                <svg class="customers-icon" height="88" width="168"> 
+            <li class="customers-links">
+            <a href=""  class="cust-posulania">
+                <svg class="customers-icon" height="56" width="104"> 
                     <use href="./images/icons.svg#icon-logo-3"></use>
                     </svg>
+            </a>
             </li>
-            <li>
-                <svg class="customers-icon" height="88" width="168"> 
+            <li class="customers-links">
+            <a href=""  class="cust-posulania">
+                <svg class="customers-icon" height="56" width="104"> 
                     <use href="./images/icons.svg#icon-logo-4"></use>
                     </svg>
+            </a>
             </li>
-            <li>
+            <li class="customers-links">
+            <a href=""  class="cust-posulania">
                 <svg class="customers-icon" height="88" width="168"> 
                     <use href="./images/icons.svg#icon-logo-5"></use>
-                    </svg>
+                </svg>
+                </a>
             </li>
-            <li>
+            <li class="customers-links">
+            <a href=""  class="cust-posulania">
                 <svg class="customers-icon" height="88" width="168"> 
                     <use href="./images/icons.svg#icon-logo-6"></use>
-                    </svg>
+                </svg>
+            </a>
             </li>
         </ul>
     </div>
@@ -297,11 +310,12 @@
   </main>
 
   <footer class="footer-section">
-    <div class="container">
+    <div class="foot-main container">
+    <div class=" foot container">
 <a href="#" class="logo foot link" target="_blank">Web<span class="logotup-footer link">Studio</span></a>
 <p class="footer-description">Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
     </div>
-<div>
+<div class="foot-socials">
     <p class="social-name">Social media</p>
     <ul class="footer-social list">
         <li class="foot-soc-item">
@@ -310,14 +324,14 @@
                 <use href="./images/icons.svg#icon-instagram"></use>
                 </svg>
             </a>
-        </li>
+        </li class="foot-soc-item">
         <li class="foot-soc-item">
             <a class="foot-social-link link" href="">
                 <svg class="footer-social-icon" width="24px" height="24px">
                 <use href="./images/icons.svg#icon-twitter"></use>
                 </svg>
             </a>
-        </li>
+        </li class="foot-soc-item">
         <li class="foot-soc-item">
             <a class="foot-social-link link" href="">
                 <svg class="footer-social-icon" width="24px" height="24px">
@@ -332,14 +346,15 @@
                 </svg>
             </a>
         </li>
-    </ul>
+    </ul>    
+</div>
 </div>
 </footer>
 
-<div class="backdrop" data-modal>
-    <div class="mnodal">
-        <button class="btn-close" type="button" data-modal-close></button>
-        <svg class="btn-close-icon" width="8px" height="8px">
+<div class="backdrop is hidden" data-modal>
+    <div class="modal">
+        <button class="modal-close" type="button" data-modal-close></button>
+        <svg class="modal-close-icon" width="8px" height="8px">
         <use href="./images/icons.svg#icon-close" ></use>
         </svg>
     </div>
