--- a/portfolio.html
+++ b/portfolio.html
@@ -20,8 +20,8 @@
         <nav class="page-navigator list">
             <a href="#" class="logo link" target="_blank">Web<span class="logotup link">Studio</span></a>
             <ul class="menu-list list">
-                <li class="menu-item list"><a href="./index.html" class="menu-item-site current link">Studio</a></li>
-                <li class="menu-item list"><a href="./portfolio.html" class="menu-item-site current link">Portfolio</a></li>
+                <li class="menu-item list"><a href="./index.html" class="menu-item-site first link">Studio</a></li>
+                <li class="menu-item list"><a href="./portfolio.html" class="menu-item-site second current link">Portfolio</a></li>
                 <li class="menu-item list"><a href="" class="menu-item-site link">Contacts</a></li>
             </ul>
         </nav>
@@ -106,7 +106,8 @@
     </main>
     
     <footer class="footer-section">
-        <div class="container">
+        <div class="foot-main container">
+        <div class="foot container">
         <a href="#" class="logo foot link" target="_blank">Web <span class="logotup-footer link">Studio</span></a>
         <p class="footer-description">Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
     </div>
@@ -142,6 +143,7 @@
                 </a>
             </li>
         </ul>
+    </div>
     </div>
     </footer>
     
