--- a/index.html
+++ b/index.html
@@ -7,10 +7,8 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@800&family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
-<link
-      rel="stylesheet"
-      href="https://cdn.jsdelivr.net/npm/modern-normalize@2.0.0/modern-normalize.min.css"
-    />
+<link rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/modern-normalize@2.0.0/modern-normalize.min.css">
 <link rel="stylesheet" href="./css/styles.css">
 </head>
 
@@ -40,7 +38,7 @@
         <section class="main-section">
         <div class="container">
             <h1 class="main-title-name">Effective Solutions for Your Business</h1>
-            <button class="button-service" type="button" data model open >Order Service</button>
+            <button class="button-service" type="button" data-model-open >Order Service</button>
         </div>
         </section>
 
@@ -51,7 +49,7 @@
      <ul class="hero list">
         <li class="hero-list-item">
             <div class="imag-hero">
-            <svg class="hero-icon" width="64px" height="64px">
+            <svg class="hero-icon" width="64" height="64">
                 <use href="./images/icons.svg#icon-antenna" ></use>
             </svg></div>
             <h3 class="third-title">Strategy</h3>
@@ -60,21 +58,21 @@
         </li>
         <li class="hero-list-item">
             <div class="imag-hero">
-            <svg class="hero-icon" width="64px" height="64px">
+            <svg class="hero-icon" width="64" height="64">
                 <use href="./images/icons.svg#icon-clock"></use>
             </svg></div>
             <h3 class="third-title">Punctuality</h3>
             <p class="hero-description">Bring the key message to the brand's audience for the best price within the shortest possible time.</p>
         </li>
         <li class="hero-list-item"> <div class="imag-hero">
-            <svg class="hero-icon" width="64px" height="64px">
+            <svg class="hero-icon" width="64" height="64">
                 <use href="./images/icons.svg#icon-diagram" ></use>
             </svg></div>
             <h3 class="third-title">Diligence</h3>
             <p class="hero-description">Research and confirm brands that present the strongest digital growth opportunities and minimize risk.</p>
         </li>
         <li class="hero-list-item"><div class="imag-hero">
-            <svg class="hero-icon" width="64px" height="64px">
+            <svg class="hero-icon" width="64" height="64">
                 <use href="./images/icons.svg#icon-astronaut" ></use>
             </svg></div>
             <h3 class="third-title">Technologies</h3>
@@ -115,28 +113,28 @@
             <ul class="team-social list">
                 <li class="team-social-item ">
                     <a class="team-social-link "  href="">
-                        <svg class="team-social-icon" width="16px" height="16px">
+                        <svg class="team-social-icon" width="16" height="16">
                         <use href="./images/icons.svg#icon-instagram"></use>
                         </svg>
                     </a>
                 </li>
                 <li class="team-social-item">
                     <a href="" class="team-social-link" >
-                        <svg class="team-social-icon" width="16px" height="16px">
+                        <svg class="team-social-icon" width="16" height="16">
                         <use href="./images/icons.svg#icon-twitter"></use>
                         </svg>
                     </a>
                 </li>
                 <li class="team-social-item">
                     <a href="" class="team-social-link">
-                        <svg class="team-social-icon" width="16px" height="16px">
+                        <svg class="team-social-icon" width="16" height="16">
                         <use href="./images/icons.svg#icon-facebook"></use>
                         </svg>
                     </a>
                 </li>
                 <li class="team-social-item">
                     <a href="" class="team-social-link">
-                        <svg class="team-social-icon" width="16px" height="16px">
+                        <svg class="team-social-icon" width="16" height="16">
                         <use href="./images/icons.svg#icon-linkedin"></use>
                         </svg>
                     </a>
@@ -152,28 +150,28 @@
             <ul class="team-social list">
                 <li class="team-social-item">
                     <a class="team-social-link" href="">
-                        <svg class="team-social-icon" width="16px" height="16px">
+                        <svg class="team-social-icon" width="16" height="16">
                         <use href="./images/icons.svg#icon-instagram"></use>
                         </svg>
                     </a>
                 </li>
                 <li class="team-social-item">
                     <a  class="team-social-link" href="">
-                        <svg class="team-social-icon" width="16px" height="16px">
+                        <svg class="team-social-icon" width="16" height="16">
                         <use href="./images/icons.svg#icon-twitter"></use>
                         </svg>
                     </a>
                 </li>
                 <li class="team-social-item">
                     <a class="team-social-link" href="">
-                        <svg class="team-social-icon" width="16px" height="16px">
+                        <svg class="team-social-icon" width="16" height="16">
                         <use href="./images/icons.svg#icon-facebook"></use>
                         </svg>
                     </a>
                 </li>
                 <li class="team-social-item">
                     <a class="team-social-link" href="">
-                        <svg class="team-social-icon" width="16px" height="16px">
+                        <svg class="team-social-icon" width="16" height="16">
                         <use href="./images/icons.svg#icon-linkedin"></use>
                         </svg>
                     </a>
@@ -189,28 +187,28 @@
             <ul class="team-social list">
                 <li class="team-social-item">
                     <a class="team-social-link" href="">
-                        <svg class="team-social-icon" width="16px" height="16px">
+                        <svg class="team-social-icon" width="16" height="16">
                         <use href="./images/icons.svg#icon-instagram"></use>
                         </svg>
                     </a>
                 </li>
                 <li class="team-social-item">
                     <a class="team-social-link" href="">
-                        <svg class="team-social-icon" width="16px" height="16px">
+                        <svg class="team-social-icon" width="16" height="16">
                         <use href="./images/icons.svg#icon-twitter"></use>
                         </svg>
                     </a>
                 </li>
                 <li class="team-social-item">
                     <a class="team-social-link" href="">
-                        <svg class="team-social-icon" width="16px" height="16px">
+                        <svg class="team-social-icon" width="16" height="16">
                         <use href="./images/icons.svg#icon-facebook"></use>
                         </svg>
                     </a>
                 </li>
                 <li class="team-social-item">
                     <a class="team-social-link" href="">
-                        <svg class="team-social-icon" width="16px" height="16px">
+                        <svg class="team-social-icon" width="16" height="16">
                         <use href="./images/icons.svg#icon-linkedin"></use>
                         </svg>
                     </a>
@@ -226,28 +224,28 @@
             <ul class="team-social list">
                 <li class="team-social-item">
                     <a class="team-social-link" href="">
-                        <svg class="team-social-icon" width="16px" height="16px">
+                        <svg class="team-social-icon" width="16" height="16">
                         <use href="./images/icons.svg#icon-instagram"></use>
                         </svg>
                     </a>
                 </li>
                 <li class="team-social-item">
                     <a class="team-social-link" href="">
-                        <svg class="team-social-icon" width="16px" height="16px">
+                        <svg class="team-social-icon" width="16" height="16">
                         <use href="./images/icons.svg#icon-twitter"></use>
                         </svg>
                     </a>
                 </li>
                 <li class="team-social-item">
                     <a class="team-social-link" href="">
-                        <svg class="team-social-icon" width="16px" height="16px">
+                        <svg class="team-social-icon" width="16" height="16">
                         <use href="./images/icons.svg#icon-facebook"></use>
                         </svg>
                     </a>
                 </li>
                 <li class="team-social-item">
                     <a class="team-social-link" href="">
-                        <svg class="team-social-icon" width="16px" height="16px">
+                        <svg class="team-social-icon" width="16" height="16p">
                         <use href="./images/icons.svg#icon-linkedin"></use>
                         </svg>
                     </a>
@@ -311,37 +309,39 @@
 
   <footer class="footer-section">
     <div class="foot-main container">
+
     <div class=" foot container">
 <a href="#" class="logo foot link" target="_blank">Web<span class="logotup-footer link">Studio</span></a>
 <p class="footer-description">Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
     </div>
+    
 <div class="foot-socials">
     <p class="social-name">Social media</p>
     <ul class="footer-social list">
         <li class="foot-soc-item">
             <a class="foot-social-link link" href="">
-                <svg class="footer-social-icon" width="24px" height="24px">
+                <svg class="footer-social-icon" width="24" height="24">
                 <use href="./images/icons.svg#icon-instagram"></use>
                 </svg>
             </a>
-        </li class="foot-soc-item">
+        </li>
         <li class="foot-soc-item">
-            <a class="foot-social-link link" href="">
-                <svg class="footer-social-icon" width="24px" height="24px">
+            <a class="foot-social-link link" href="" >
+                <svg class="footer-social-icon" width="24" height="24">
                 <use href="./images/icons.svg#icon-twitter"></use>
                 </svg>
             </a>
-        </li class="foot-soc-item">
+        </li>
         <li class="foot-soc-item">
             <a class="foot-social-link link" href="">
-                <svg class="footer-social-icon" width="24px" height="24px">
+                <svg class="footer-social-icon" width="24" height="24">
                 <use href="./images/icons.svg#icon-facebook"></use>
                 </svg>
             </a>
         </li>
         <li class="foot-soc-item">
             <a class="foot-social-link link" href="">
-                <svg class="footer-social-icon" width="24px" height="24px">
+                <svg class="footer-social-icon" width="24" height="24">
                 <use href="./images/icons.svg#icon-linkedin"></use>
                 </svg>
             </a>
@@ -354,7 +354,7 @@
 <div class="backdrop is hidden" data-modal>
     <div class="modal">
         <button class="modal-close" type="button" data-modal-close></button>
-        <svg class="modal-close-icon" width="8px" height="8px">
+        <svg class="modal-close-icon" width="8" height="8">
         <use href="./images/icons.svg#icon-close" ></use>
         </svg>
     </div>
