--- a/portfolio.html
+++ b/portfolio.html
@@ -7,10 +7,8 @@
      <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@800&family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
-<link
-      rel="stylesheet"
-      href="https://cdn.jsdelivr.net/npm/modern-normalize@2.0.0/modern-normalize.min.css"
-    />
+<link rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/modern-normalize@2.0.0/modern-normalize.min.css">
 <link rel="stylesheet" href="./css/styles.css">
 </head>
 
@@ -46,7 +44,8 @@
         <li > <button class="item-list-but" type="button">Marketing</button></li>
     </ul>
             <ul class="last list">
-                <li class="last-unit"> <a class="list-list link" href="#">
+                <li class="last-unit"> 
+                    <a class="list-list link" href="#">
                     <img src="./images/img-7-3.jpg" alt="App" width="360" height="300" >
                     <div class="list-text">
                     <h2 class="third-title">Banking App Interface Concept</h2>
@@ -116,28 +115,28 @@
         <ul class="footer-social list">
             <li class="foot-soc-item">
                 <a class="foot-social-link link" href="">
-                    <svg class="footer-social-icon" width="24px" height="24px">
+                    <svg class="footer-social-icon" width="24" height="24">
                     <use href="./images/icons.svg#icon-instagram"></use>
                     </svg>
                 </a>
             </li>
             <li class="foot-soc-item">
                 <a class="foot-social-link link" href="">
-                    <svg class="footer-social-icon" width="24px" height="24px">
+                    <svg class="footer-social-icon" width="24" height="24">
                     <use href="./images/icons.svg#icon-twitter"></use>
                     </svg>
                 </a>
             </li>
             <li class="foot-soc-item">
                 <a class="foot-social-link link" href="">
-                    <svg class="footer-social-icon" width="24px" height="24px">
+                    <svg class="footer-social-icon" width="24" height="24">
                     <use href="./images/icons.svg#icon-facebook"></use>
                     </svg>
                 </a>
             </li>
             <li class="foot-soc-item">
                 <a class="foot-social-link link" href="">
-                    <svg class="footer-social-icon" width="24px" height="24px">
+                    <svg class="footer-social-icon" width="24" height="24">
                     <use href="./images/icons.svg#icon-linkedin"></use>
                     </svg>
                 </a>
