--- a/portfolio.html
+++ b/portfolio.html
@@ -45,56 +45,94 @@
     </ul>
             <ul class="last list">
                 <li class="last-unit"> 
+
                     <a class="list-list link" href="#">
+
+                    <div class="overlay">
                     <img src="./images/img-7-3.jpg" alt="App" width="360" height="300" >
+                    <p class="overlay-text">
+                    14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App
+                    </p>
+                    </div>
                     <div class="list-text">
                     <h2 class="third-title">Banking App Interface Concept</h2>
                     <p class="hero-description">App</p></div></a>
+
                 </li>
                 <li class="last-unit"> <a class="list-list link" href="#">
+                    <div class="overlay">
                     <img src="./images/img-4-3.jpg" alt="Marketing" width="360" height="300" >
+                    <p class="overlay text">
+                        14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App
+                        </p>
+                        </div>    
                     <div class="list-text">
                     <h2 class="third-title">Cashless Payment</h2>
                     <p class="hero-description">Marketing</p></div></a>
                 </li> 
                 <li class="last-unit"><a class="list-list link" href="#">
+                    <div class="overlay">
                     <img src="./images/img-5-3.jpg" alt="App" width="360" height="300" >
+                    <p class="overlay-text">
+                        14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App
+                        </p>
                     <div class="list-text">
                     <h2 class="third-title">Meditation App</h2>
                     <p class="hero-description">App</p></div></a>
                 </li> 
                 <li class="last-unit"><a class="list-list link" href="#">
+                    <div class="overlay">
                     <img src="./images/img-6-3.jpg" alt="Marketing" width="360" height="300" >
+                    <p class="overlay-text">
+                        14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App
+                        </p>
                     <div class="list-text">
                     <h2 class="third-title">Taxi Service</h2>
                     <p class="hero-description">Marketing</p></div></a>
                 </li> 
                 <li class="last-unit"><a class="list-list link" href="#">
+                    <div class="overlay">
                     <img src="./images/img-8-2.jpg" alt="Design" width="360" height="300">
+                    <p class="overlay-text">
+                        14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App
+                        </p>
                     <div class="list-text">
                     <h2 class="third-title">Screen Illustrations</h2>
                     <p class="hero-description">Design</p></div></a>
                 </li> 
                 <li class="last-unit"><a class="list-list link" href="#">
+                    <div class="overlay">
                     <img src="./images/img-9-2.jpg" alt="Marketing" width="360" height="300" >
+                    <p class="overlay-text">
+                        14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App
+                        </p>
                     <div class="list-text">
                     <h2 class="third-title">Online Courses</h2>
                     <p class="hero-description">Marketing</p></div></a>
                 </li> 
-                <li class="last-unit"><a class="list-list link" href="#">
+                <li class="last-unit"><a class="list-list link" href="#"> <div class="overlay"></div>
                     <img src="./images/img-10-2.jpg" alt="Design" width="360" height="300">
+                    <p class="overlay-text">
+                        14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App
+                        </p>
                     <div class="list-text">
                     <h2 class="third-title">Instagram Stories Concept</h2>
                     <p class="hero-description">Design</p></div></a>
                 </li> 
-                <li class="last-unit"><a class="list-list link" href="#">
+                <li class="last-unit"><a class="list-list link" href="#"> <div class="overlay"></div>
                     <img src="./images/img-11-2.jpg" alt="Web Site" width="360" height="300" >
+                    <p class="overlay-text">
+                        14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App
+                        </p>
                     <div class="list-text">
                     <h2 class="third-title">Organic Food</h2>
                     <p class="hero-description">Web Site</p></div></a>
                 </li> 
-                <li class="last-unit"><a class="list-list link " href="#">
+                <li class="last-unit"><a class="list-list link " href="#"> <div class="overlay"></div>
                     <img src="./images/img-12-2.jpg" alt="Web Site" width="360" height="300">
+                    <p class="overlay-text">
+                        14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App
+                        </p>
                     <div class="list-text">
                     <h2 class="third-title">Fresh Coffee</h2>
                     <p class="hero-description">Web Site</p></div></a>
