--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 
 <body>
-    <header class="page-header ">
+    <header class="page-header">
         <div class="header-gen container">
         <nav class="page-navigator list">
             <a href="#" class="logo link" target="_blank">Web<span class="logotup link">Studio</span></a>
@@ -35,10 +35,10 @@
     
     <main>
         <!--  -->
-        <section class="main-section">
+        <section class="mains-section">
         <div class="container">
             <h1 class="main-title-name">Effective Solutions for Your Business</h1>
-            <button class="button-service" type="button" data-model-open >Order Service</button>
+            <button class="button-service" type="button" data-modal-open >Order Service</button>
         </div>
         </section>
 
@@ -351,7 +351,7 @@
 </div>
 </footer>
 
-<div class="backdrop is hidden" data-modal>
+<div class="backdrop is-hidden" data-modal>
     <div class="modal">
         <button class="modal-close" type="button" data-modal-close></button>
         <svg class="modal-close-icon" width="8" height="8">
