--- a/index.html
+++ b/index.html
@@ -31,7 +31,6 @@
         </address>
     </div>
     </header>
-
     
     <main>
         <!-- 1 -->
@@ -355,10 +354,11 @@
 
 <div class="backdrop is-hidden" data-modal>
     <div class="modal">
-        <button class="modal-close" type="button" data-modal-close></button>
+        <button class="modal-close" type="button" data-modal-close>
         <svg class="modal-close-icon" width="8" height="8">
-        <use href="./images/icons.svg#icon-close" ></use>
+        <use href="./images/icons.svg#icon-close"></use>
         </svg>
+    </button>
     </div>
 </div>
 
