--- a/index.html
+++ b/index.html
@@ -309,7 +309,7 @@
   <footer class="footer-section">
     <div class="foot-main container">
 
-    <div class="foot container">
+    <div class="foot-one container">
 <a href="#" class="logo foot link" target="_blank">Web<span class="logotup-footer link">Studio</span></a>
 <p class="footer-description">Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
     </div>
