--- a/portfolio.html
+++ b/portfolio.html
@@ -168,12 +168,15 @@
     </main>
     
     <footer class="footer-section">
+
         <div class="foot-main container">
-        <div class="foot container">
+
+    <div class="foot-one container">
         <a href="#" class="logo foot link" target="_blank">Web <span class="logotup-footer link">Studio</span></a>
         <p class="footer-description">Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
     </div>
-    <div>
+
+    <div class="foot-socials">
         <p class="social-name">Social media</p>
         <ul class="footer-social list">
             <li class="foot-soc-item">
